syntax = "proto3";

package helloworld.greeter.v1;

option go_package="github.com/go-eagle/eagle-layout/api/helloworld/gretter/v1;v1";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}